fix the expand/collapse all function in IE6 - test #80

--- a/project/media/styles/ie.css
+++ b/project/media/styles/ie.css
@@ -26,6 +26,8 @@
 }
 
 .index-filters .filter dd,
-a.expand-link {
+a.expand-link,
+.materials-index dl.expanded,
+.materials-index dl.collapsed {
   background: none !important;
 }
